// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseIllustration 接收 size prop 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={80}
  viewBox="0 0 120 140"
  width={80}
>
  <View
    cx={60}
    cy={130}
    data-svg-mock="Ellipse"
    fill="#FFE8D0"
    rx={30}
    ry={5}
  />
  <View
    data-svg-mock="Line"
    stroke="#FF9500"
    strokeDasharray="5 4"
    strokeLinecap="round"
    strokeWidth={2.5}
    x1={24}
    x2={96}
    y1={124}
    y2={124}
  />
  <View
    cx={36}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={12}
    ry={5}
  />
  <View
    cx={84}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={12}
    ry={5}
  />
  <View
    d="M36 120 L40 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    d="M84 120 L80 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    cx={40}
    cy={96}
    data-svg-mock="Circle"
    fill="#FF9500"
    r={6}
  />
  <View
    cx={80}
    cy={96}
    data-svg-mock="Circle"
    fill="#FF9500"
    r={6}
  />
  <View
    d="M40 96 L50 76"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    d="M80 96 L70 76"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    data-svg-mock="Rect"
    fill="#FF9500"
    height={22}
    rx={10}
    width={32}
    x={44}
    y={58}
  />
  <View
    d="M46 66 L22 64"
    data-svg-mock="Path"
    stroke="#FF9500"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M74 66 L98 64"
    data-svg-mock="Path"
    stroke="#FF9500"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    cx={20}
    cy={64}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={6}
  />
  <View
    cx={100}
    cy={64}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={6}
  />
  <View
    cx={60}
    cy={42}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={14}
  />
  <View
    d="M47 38 Q50 24 60 22 Q70 24 73 38"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    d="M55 46 Q60 50 65 46"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    cx={55}
    cy={40}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={65}
    cy={40}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    d="M52 36 L57 34"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    d="M63 34 L68 36"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
</View>
`;

exports[`ExerciseIllustration 渲染仰卧起坐插画 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={120}
  viewBox="0 0 120 140"
  width={120}
>
  <View
    cx={60}
    cy={128}
    data-svg-mock="Ellipse"
    fill="#D0F0EC"
    rx={42}
    ry={6}
  />
  <View
    data-svg-mock="Rect"
    fill="#0A8F85"
    height={10}
    opacity={0.2}
    rx={5}
    width={76}
    x={22}
    y={104}
  />
  <View
    cx={88}
    cy={110}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={10}
    ry={5}
  />
  <View
    d="M88 108 L82 88"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    cx={82}
    cy={88}
    data-svg-mock="Circle"
    fill="#0A8F85"
    r={6}
  />
  <View
    d="M82 88 L52 72"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    data-svg-mock="Rect"
    fill="#0A8F85"
    height={22}
    rx={10}
    width={32}
    x={28}
    y={60}
  />
  <View
    cx={30}
    cy={52}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={14}
  />
  <View
    d="M17 48 Q20 34 30 32 Q40 34 43 48"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    d="M25 56 Q30 60 35 56"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    cx={25}
    cy={50}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={35}
    cy={50}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    d="M36 68 L48 66"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M48 66 L56 70"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={7}
  />
  <View
    d="M20 68 L12 64"
    data-svg-mock="Path"
    opacity={0.4}
    stroke="#0A8F85"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    d="M18 58 L10 56"
    data-svg-mock="Path"
    opacity={0.3}
    stroke="#0A8F85"
    strokeLinecap="round"
    strokeWidth={1.5}
  />
</View>
`;

exports[`ExerciseIllustration 渲染开合跳插画 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={120}
  viewBox="0 0 120 140"
  width={120}
>
  <View
    cx={60}
    cy={130}
    data-svg-mock="Ellipse"
    fill="#D9F5E5"
    rx={32}
    ry={5}
  />
  <View
    cx={28}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={10}
    ry={5}
  />
  <View
    cx={92}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={10}
    ry={5}
  />
  <View
    d="M28 122 L42 88"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    d="M92 122 L78 88"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    data-svg-mock="Rect"
    fill="#34C759"
    height={30}
    rx={12}
    width={28}
    x={46}
    y={62}
  />
  <View
    d="M48 70 L16 42"
    data-svg-mock="Path"
    stroke="#34C759"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M72 70 L104 42"
    data-svg-mock="Path"
    stroke="#34C759"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    cx={14}
    cy={40}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={8}
  />
  <View
    cx={14}
    cy={40}
    data-svg-mock="Circle"
    fill="#FF9500"
    r={4}
  />
  <View
    cx={106}
    cy={40}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={8}
  />
  <View
    cx={106}
    cy={40}
    data-svg-mock="Circle"
    fill="#FF9500"
    r={4}
  />
  <View
    cx={60}
    cy={44}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={14}
  />
  <View
    d="M47 40 Q50 26 60 24 Q70 26 73 40"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    d="M54 48 Q60 54 66 48"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2.5}
  />
  <View
    cx={54}
    cy={42}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={66}
    cy={42}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    d="M8 58 L2 52 M8 52 L2 46"
    data-svg-mock="Path"
    opacity={0.6}
    stroke="#34C759"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    d="M112 58 L118 52 M112 52 L118 46"
    data-svg-mock="Path"
    opacity={0.6}
    stroke="#34C759"
    strokeLinecap="round"
    strokeWidth={2}
  />
</View>
`;

exports[`ExerciseIllustration 渲染深蹲插画 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={120}
  viewBox="0 0 120 140"
  width={120}
>
  <View
    cx={60}
    cy={130}
    data-svg-mock="Ellipse"
    fill="#FFE8D0"
    rx={30}
    ry={5}
  />
  <View
    data-svg-mock="Line"
    stroke="#FF9500"
    strokeDasharray="5 4"
    strokeLinecap="round"
    strokeWidth={2.5}
    x1={24}
    x2={96}
    y1={124}
    y2={124}
  />
  <View
    cx={36}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={12}
    ry={5}
  />
  <View
    cx={84}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={12}
    ry={5}
  />
  <View
    d="M36 120 L40 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    d="M84 120 L80 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    cx={40}
    cy={96}
    data-svg-mock="Circle"
    fill="#FF9500"
    r={6}
  />
  <View
    cx={80}
    cy={96}
    data-svg-mock="Circle"
    fill="#FF9500"
    r={6}
  />
  <View
    d="M40 96 L50 76"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    d="M80 96 L70 76"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    data-svg-mock="Rect"
    fill="#FF9500"
    height={22}
    rx={10}
    width={32}
    x={44}
    y={58}
  />
  <View
    d="M46 66 L22 64"
    data-svg-mock="Path"
    stroke="#FF9500"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M74 66 L98 64"
    data-svg-mock="Path"
    stroke="#FF9500"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    cx={20}
    cy={64}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={6}
  />
  <View
    cx={100}
    cy={64}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={6}
  />
  <View
    cx={60}
    cy={42}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={14}
  />
  <View
    d="M47 38 Q50 24 60 22 Q70 24 73 38"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    d="M55 46 Q60 50 65 46"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    cx={55}
    cy={40}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={65}
    cy={40}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    d="M52 36 L57 34"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    d="M63 34 L68 36"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
</View>
`;

exports[`ExerciseIllustration 渲染立定跳远插画 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={120}
  viewBox="0 0 120 140"
  width={120}
>
  <View
    data-svg-mock="Rect"
    fill="#AF52DE"
    height={20}
    opacity={0.4}
    rx={3}
    width={6}
    x={8}
    y={110}
  />
  <View
    data-svg-mock="Line"
    stroke="#E5E5EA"
    strokeLinecap="round"
    strokeWidth={2.5}
    x1={8}
    x2={112}
    y1={126}
    y2={126}
  />
  <View
    data-svg-mock="Rect"
    fill="#AF52DE"
    height={20}
    opacity={0.4}
    rx={3}
    width={6}
    x={106}
    y={110}
  />
  <View
    d="M28 110 Q66 50 104 108"
    data-svg-mock="Path"
    stroke="#AF52DE"
    strokeDasharray="5 4"
    strokeLinecap="round"
    strokeWidth={2.5}
  />
  <View
    d="M98 102 L104 108 L97 112"
    data-svg-mock="Path"
    stroke="#AF52DE"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2.5}
  />
  <View
    cx={24}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={9}
    ry={4}
  />
  <View
    d="M24 120 L30 98"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    d="M30 98 L36 80"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    d="M36 80 L48 60"
    data-svg-mock="Path"
    stroke="#AF52DE"
    strokeLinecap="round"
    strokeWidth={10}
  />
  <View
    d="M40 70 L58 52"
    data-svg-mock="Path"
    stroke="#AF52DE"
    strokeLinecap="round"
    strokeWidth={7}
  />
  <View
    d="M44 76 L60 62"
    data-svg-mock="Path"
    stroke="#AF52DE"
    strokeLinecap="round"
    strokeWidth={7}
  />
  <View
    cx={60}
    cy={50}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={6}
  />
  <View
    cx={62}
    cy={60}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={6}
  />
  <View
    cx={52}
    cy={46}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={13}
  />
  <View
    d="M40 42 Q43 28 52 26 Q62 28 65 42"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    cx={48}
    cy={44}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={57}
    cy={44}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    d="M48 50 Q52 54 57 50"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
</View>
`;

exports[`ExerciseIllustration 渲染纵跳插画 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={120}
  viewBox="0 0 120 140"
  width={120}
>
  <View
    cx={60}
    cy={130}
    data-svg-mock="Ellipse"
    fill="#FFE0DF"
    rx={28}
    ry={5}
  />
  <View
    d="M92 100 L92 34"
    data-svg-mock="Path"
    opacity={0.2}
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={3}
  />
  <View
    d="M92 100 L92 34"
    data-svg-mock="Path"
    opacity={0.5}
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    d="M86 42 L92 34 L98 42"
    data-svg-mock="Path"
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2.5}
  />
  <View
    d="M14 54 L22 54"
    data-svg-mock="Path"
    opacity={0.5}
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={2.5}
  />
  <View
    d="M10 64 L20 64"
    data-svg-mock="Path"
    opacity={0.35}
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    d="M14 74 L22 74"
    data-svg-mock="Path"
    opacity={0.25}
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={1.5}
  />
  <View
    cx={50}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={9}
    ry={5}
  />
  <View
    cx={70}
    cy={122}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={9}
    ry={5}
  />
  <View
    d="M50 120 L48 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    d="M70 120 L72 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    data-svg-mock="Rect"
    fill="#FF3B30"
    height={35}
    rx={14}
    width={32}
    x={44}
    y={64}
  />
  <View
    d="M46 74 L28 44"
    data-svg-mock="Path"
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M74 74 L76 44"
    data-svg-mock="Path"
    stroke="#FF3B30"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    cx={26}
    cy={42}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={7}
  />
  <View
    cx={76}
    cy={42}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={7}
  />
  <View
    cx={60}
    cy={46}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={14}
  />
  <View
    d="M47 42 Q50 28 60 26 Q70 28 73 42"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    d="M53 52 Q60 58 67 52"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2.5}
  />
  <View
    cx={53}
    cy={44}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={67}
    cy={44}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2.5}
  />
  <View
    cx={50}
    cy={49}
    data-svg-mock="Ellipse"
    fill="#FFB3A7"
    opacity={0.6}
    rx={4}
    ry={2.5}
  />
  <View
    cx={70}
    cy={49}
    data-svg-mock="Ellipse"
    fill="#FFB3A7"
    opacity={0.6}
    rx={4}
    ry={2.5}
  />
</View>
`;

exports[`ExerciseIllustration 渲染跳绳插画 1`] = `
<View
  data-svg-mock="Svg"
  fill="none"
  height={120}
  viewBox="0 0 120 140"
  width={120}
>
  <View
    cx={60}
    cy={130}
    data-svg-mock="Ellipse"
    fill="#DBEFFE"
    rx={30}
    ry={5}
  />
  <View
    d="M18 72 Q60 118 102 72"
    data-svg-mock="Path"
    stroke="#007AFF"
    strokeLinecap="round"
    strokeWidth={4}
  />
  <View
    cx={48}
    cy={118}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={9}
    ry={5}
  />
  <View
    cx={72}
    cy={118}
    data-svg-mock="Ellipse"
    fill="#1C1C1E"
    rx={9}
    ry={5}
  />
  <View
    d="M48 118 L44 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M72 118 L76 96"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={8}
  />
  <View
    d="M44 96 L50 76"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    d="M76 96 L70 76"
    data-svg-mock="Path"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={9}
  />
  <View
    data-svg-mock="Rect"
    fill="#007AFF"
    height={30}
    rx={12}
    width={26}
    x={47}
    y={50}
  />
  <View
    cx={60}
    cy={36}
    data-svg-mock="Circle"
    fill="#FFD4B8"
    r={14}
  />
  <View
    d="M47 32 Q50 18 60 16 Q70 18 73 32"
    data-svg-mock="Path"
    fill="#1C1C1E"
  />
  <View
    d="M48 58 L22 72"
    data-svg-mock="Path"
    stroke="#007AFF"
    strokeLinecap="round"
    strokeWidth={7}
  />
  <View
    data-svg-mock="Rect"
    fill="#FF9500"
    height={18}
    rx={5}
    width={10}
    x={14}
    y={68}
  />
  <View
    d="M72 58 L98 72"
    data-svg-mock="Path"
    stroke="#007AFF"
    strokeLinecap="round"
    strokeWidth={7}
  />
  <View
    data-svg-mock="Rect"
    fill="#FF9500"
    height={18}
    rx={5}
    width={10}
    x={96}
    y={68}
  />
  <View
    d="M55 40 Q60 44 65 40"
    data-svg-mock="Path"
    fill="none"
    stroke="#1C1C1E"
    strokeLinecap="round"
    strokeWidth={2}
  />
  <View
    cx={55}
    cy={35}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2}
  />
  <View
    cx={65}
    cy={35}
    data-svg-mock="Circle"
    fill="#1C1C1E"
    r={2}
  />
</View>
`;
